--- a/report/text/ArduinoDesign.tex
+++ b/report/text/ArduinoDesign.tex
@@ -1,10 +1,10 @@
-\chapter{Design of Demo Devices}
-This chapter is focused on the tag reader and power control device of the Managed Online Media system. \newline
-The design and functionality of the prototype will be presented in parallel to the designed end product. \newline
+\chapter{Design of the Controller}
+This chapter is focused on the controller of the Media-Online Management system. The controller consist of a tag reader and power control device which is disgusted in this chapter but when mentioning controller both is implied. \newline
+The design and functionality of the prototype controller will be presented in parallel to the designed end product. \newline
 
 \section{Product Design}
 
-There is two devises need to activete a usage of device from the user to the server as shown in figure below.
+There is two devices needed to activate a media from the user to the server as shown in figure \ref{fig:Power&Tagdevice}.
 
 
 \begin{figure}[h]
@@ -14,45 +14,52 @@ There is two devises need to activete a usage of device from the user to the ser
 	\label{fig:Power&Tagdevice}
 \end{figure}
 
-One is a small detection device to read user tags when swiped over it, this devise is often placed in the most asseble place. \newline
-The other devise is a powercontrol devise whitch i located on the powerline to the media device and tunes on and off the electrisity when needed.\newline
-The powercontrol devise(PCD) is the brain of the two devises and is therefore to moniter the users time usage and communication center with the server and detection devise. \newline
-The detection devise(DD) also work as infomation communicater to the user on the state of the connection to the server, acceptens/decline of login and more. \newline    
+One of them is a small detection device to read the user's tag when swiped over, This device is often placed in the most accessible place. \newline
+The other device is a powercontrol device which is located on the powerline to the media device and turns on and off the electricity when needed.\newline
+The powercontrol device(PCD) is the brain of the two devices and is therefore to monitor the time usage of the media. It should also communicate with the server and detection device. \newline
+The detection device(DD) should also inform the user who is trying to activate a media of whether the activation has been approved or declined by the server.
+%The detection device(DD) also works as an information communicator to the user, on the state of the connection to the server about acceptance/decline of log-in. \newline    
 
 \subsection{Senario Design}
 
-The systemt is designed on mulitble senarios and the creteria of communication to server and user. The flow chart below is a overview of actions and communication the two devices have to give the right permission to user, communicat with the user and server about status, handel disconnection to server and control of user- and timeusage restrictions.\newline
+The system has been designed on multiple scenarios and the criteria of communication to the server and user. The flow chart \ref{} is an overview of the action and communication the two devices have to give the right permission to user, communicate with the user and server about status, handle disconnection to server and control of user and time usage restrictions.\fixme{sentence makes no sense}\newline
 
 \fixme{indsæt Flowcart af systemet}
 
-To test develop the flowcart of the system is multible usercases constucted.\newline
+To test develop the flowcart of the system is multible usercases constucted.\fixme{sentence makes no sense}\newline
 
 
 \textbf{Setting up and turning on the system.} \newline
-The PCD retive information on wifi connection form USB port if an USB is connected at start point of PCD. 
-If the USB information is wrong or not retived then a restart botton is included to redo the procedure.  \newline
-The PCD will then connect to the wifi network and to the web server of MOM. If the connection isn't found a massage is send to the DD. \newline DD indicate that there is no connection by showing a constant red light. The communication protocal can be found in the appendix  \fixme{indsæt referance til appendix table af lys indikater}.\newline When the connection is established then the DD is ready to read user tags.\newline
+In the final design the PCD will receive the information about the WiFi connection from USB connection.
+If the information on the USB is wrong or not received then a restart button is included to redo the procedure.  \newline
+The PCD will then connect to the WiFi network and add the controller to the database in his MOM system. If the connection is not found a message is send to the DD. \newline 
+DD indicates that there is no connection by showing a constant red light. The communication protocol can be found in the appendix \vref{appen:lights}.\newline When the connection is established then the DD is ready to read user tags.\newline
+
+However, this design will not be implemented in this project. Instead there is a wired connection to the internet and the controller need to be manually added into the database.
 
 \textbf{Detection of connection issues and status changes.} \newline
-The connection to the sever is tested by a rutine call every five minutes form the PCD to the server. In this call will the PCD recieve information on when next rule or user time cut will come. This both insure that there is connection each five minutes and if any changes in rules or in the time the user may spend on the media device. In the period between the call will the PCD ask for a tag from the DD. If the PCD is disconnected form the server that is informed to the DD and to the user.  \newline
+The connection to the sever is tested by a routine call every five minutes from the PCD to the server. In this call the PCD will receive information on when the media should shutdown based on a rule or the user's remaining time. This insures that if any changes in the remaining time or the rules which will influences when the media should shut down then it will still be handled.
+%This insure that there is a connection each five minutes and if any changes in rules or in the time the user may spend on the media. 
+In between those calls the PCD will check for a tag from the DD. If the PCD is disconnected from the server that is informed to the DD and to the user.  \newline
 	
 \textbf{Logon/logoff media divice.} \newline
-When a tag is read by the DD will the PCD recieve the tag id which formed to a login massage if no one is all ready logged in the system. The PCD will then read if the user is declined or accepted to use the device. If the user is accepted then the PCD will switch the power on to the media device, save the tag id in local memory and recieve time left before a rule or to time usage limit accour. The DD indicate to the user that he/she is approved to use the media device.\newline When the PCD recieve the tag id that is stored in the local memory then it means the user is logging off. The PCD will switch off the power to the media device and send a logoff massage til the server. Should another user want to take over the usage of a media device the PCD will try to login with the new tag if declined then the DD will then signal this and keep the old user on. If accepted then the server will overwirte the the previus user and PCD will recieve the information for the new user with out turning the power off and then on again.\newline
+When a tag is read by the DD the PCD will receive the tag id which is then formed into a log-in message and send to the web servers API. however this is only if no one is all ready logged on the media in the system. The PCD will then get a message about whether the user has permission to use the media from the API. If the user has permission then the PCD should direct power to the media, then save the tag id in local memory and receive the remaining time from the API. The DD should indicate whether the user is approved to use the media.\newline 
+To log-off the PCD receive the same tag id that is stored in the local memory. The PCD will then switch off the power to the media and send a log-off message to the API. \newline
+If another user wants to take over the usage of the media then the PCD should try to log-in with the new tag. If this is declined then the DD should then signal this and keep the old user logged on. If it is accepted then the server should overwrite the previous user and PCD will receive the information for the new user with out turning the power off and then on again.\fix{if this has not been included in the implementation then it should be mentioned}\newline
 
 
-\textbf{Disconnection under use.} \newline
-A disconection is either found under the regular status call efter each five minutes or at a logon/logoff call. A disconection will lock the device so only the current user can use the media device until the PCD is reconected with the server. The server see the disconection when there haven't been a status call from the device in five minutes. The disconnection is translated to a logoff at the server side stoppe the usage of the users time to use media devises. The use will not be logged off at the media device but will be able to use his/her time until a rule or his/her time used up according to the last status the PCD have got and is keeping track of. If the user want to logoff in a period where there is a disconnection a time stamp is set to sent to the server when the connection is reastablage. The media can also first be used when the connection is reastablage.   
-This procedure have the advange that the user will not have to cut off the media in use if the connection is waopely and the user will be able to login on other media device even with previus media divice not yet have connection. 
-The disavenge is that the user has the possiblety to overuse the time resigtion by still use the disconnected divice until there is no more time and in the mean time has turned on at new device. 
-The disadvange will but also have the effect to punish the user with a big negitive time to use other devices when the disconnected device is reconnected and this should discourage this senario.       
-    
+\textbf{Server disconnection under use.} \newline
+A disconnection from the server is either found under the regular status call after each five minutes or at a log-on/log-off call. A disconnection will lock the device so only the current user can use the media until the PCD is reconnected with the server. The server discovers the lack of connection when there have not been a status call from the device in five minutes. The disconnection is translated to a log-off the media at the server side. 
+The user will not be logged off by the controller but will be able to use his time according to the last status. If the user want to log-off in a period where there is a disconnection a time stamp is saved and will be sent to the server when the connection is reestablished. The media can also first be used again when the connection is reestablished. 
+This procedure have the advantage that the user will not have to cut off the media in use if the connection is unstable. The user will also be able to use a another media with connection to the server.
+The disadvantage is that the user has the possible to exceed the time restriction if there has been a change in the rules or the user's remaining time. 
 		
 \section{Prototype Implemtation}
-The prototype is designed to prove the concept of a tag reader and the communication protecol between powercontrol and server. Therefor shall the Ardurino hardware be seen as replaceble for to manufature this system it is need be unic devices that is able to connect on the power core to the the media device and slim designed card reader with speaker and indications lights. To prove the conecpt the device is able to read and accept/decline tags, handele time usage and time restictions. 
+The prototype is designed to prove the concept of a tag reader and the communication protocol between power control and server. Therefore  the Ardurino hardware should be seen as replaceable by another controller device in this system. The only requirement is that it is able to  to direct the power to and away from the media, it can control a tag reader, communicate with the server and it need to be a unique device. To prove the concept of the controller it need to be able to read and accept/decline tags, handle time usage and time restrictions. 
 
 \fixme{Indsæt flowchart}
 
-Flowchart is the current level of the prototype as is very similar to figue \ref{fig:Power&Tagdevice} 
+Flowchart is the current level of the prototype as is very similar to figure \ref{fig:Power&Tagdevice} 
 
 
 
