--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -34,20 +34,23 @@ In a Heuristic evaluation the test person(s) look for errors and potential usabi
 Typically the test is done by 1-3 test persons\citep{HeuristicEvaluation}. The test person should be a usability experts or a software developer with the expertise in a relevant system. To make the test they should have relevant information of the user and a set of task to follow but they are also allowed to make their own.
 
 
-\section{Test cases of MOM} %Jakob
-
-
 \section{Heuristic Evaluation of Media-Online Management}
-The evaluation of Media-online Management system is being done by (a) person(s)\fixme{når jeg ved mere (ental/flertal)} in the group which have been highly involved in the development of system. This is not optimal in this test where the test person(s) should be an usability expert from outside the development group.
+Before performing a Heuristic evaluation we need to determine what is needed before the evaluation is done and how the results should be presented.
 
-\subsection{Planning and Conducting the Test}
--testcases
--user description
-- find evaluators
+\subsection{Planning the Evaluation}
+When planing the evaluation the test persons need to get test persons. They need to get a small description of the user and some test cases. They should also get a list of the heuristics from which the system need to be evaluated from. This should all be made prior to the evaluation. \\
+
+The evaluation of Media-online Management system is being done by (a) person(s)\fixme{når jeg ved mere (ental/flertal)} in the group which have been highly involved in the development of system. This is not optimal in this test where the test person(s) should be an usability expert from outside the development group.\\
+
+The test persons also need to know the user. So the test person(s) need a general description of the user and their technology capabilities. The user of MOM is parents and children. The children is only in contact with the controller and the parents are both using the controller and the website. The parents has a general experience with the internet, but they are not experts. However we expect them to be able to at least set up an e-mail account with Google or Hotmail. The children has few technology skill but they are capable to turn on a normal television. \\
+
+Before the test is conducted some test cases should be made the development team. This should cover several cases in the system such that the test person(s) is presented to every aspect of the system. The test cases of MOM can be found in section \vref{} \fixme{ref to be inserted}. \\
+
+
 - choose the Heuristics which it should be evaluated against
 
--is it Individual or group Evaluation
+\subsection{presenting the Results}
 
-\subsection{Analysing your Results}
+\input{text/testCases.tex}
 
 \section{Results of the Heuristic Evaluation}
