--- a/report/text/usingEthernet.tex
+++ b/report/text/usingEthernet.tex
@@ -1,9 +1,11 @@
 \subsection{Using the Ethernet Shield.}
+\fixme{Mangler kort kommentar om hvorfor Ethernat er brugt istedet for en Wifi connection}
 The Ethernet shield is the primary component in accessing the API as it allows for the Arduino to access the web as a client.
 We use the Ethernet shield along with a JSON parser in order to make HTML requests on the web site that contains the system API and decode its responce.
 
 The Ethernet Shield comes with an MAC address printed on the side which is used to automatically obtain an IP Address.
 This along with the target server is established as global variables as seen in \autoref{EthStart} along with the Method call in \verb|Setup()| that establishes a connection with the LAN. All supplied from the Arduino Library \verb|Ethernet.h|.
+\fixme{kunne være korte statement på sær funktioner for eksemple F står for når du printer} 
 \begin{lstlisting}[frame=single, label=EthStart, caption=The Method Calls used to establish and maintain a connection.]
 //The Mac Address declared.
 byte mac[] = { 0x90, 0xA2, 0xDA, 0x0E, 0xC5, 0x94 };
@@ -11,10 +13,12 @@ byte mac[] = { 0x90, 0xA2, 0xDA, 0x0E, 0xC5, 0x94 };
 //Our target Server that the API is called on
 char server[] = "spcadmin.tk";
 
+\fixme{mangler vist et ord.}
 //When this statement is evaluated the  Arduino to the LAN.
 //This happens during Setup();
 if (Ethernet.begin(mac) == 0) 
 {
+	\fixme{Hvad sker der så, er det bare en død Audrino?}
   //If the Evaluation returns 0 it fails and stops doing anything.
 	Serial.println(F("Failed to configure Ethernet using DHCP"));
 	while(true); 
@@ -25,7 +29,7 @@ if (Ethernet.begin(mac) == 0)
 Ethernet.maintain();
 \end{lstlisting}
 
-Whether the user tries to log in or out from the device he is interacting with, the arduino will have to access the web server via the API.
+Whether the user tries to log in or out from the device, the Arduino will have to access the web server via the API.
 The process is almost identical in either case and can be divided into two parts:
 \begin{itemize}
 	\item Connecting to the API.
@@ -33,8 +37,8 @@ The process is almost identical in either case and can be divided into two parts
 \end{itemize}
 
 As seen in \autoref{pageConnect} the Device ID and the Tag ID is connected in a char array to form the url which complies with the action that is being performed. \fixme{connect this to the API implmentation}
-Then in return the Ethernet Shield receives the HTML Page, and in \autoref{pageDecipher} the Arduino reads this information one byte at the time where all but the JSON string is stripped and stored in a Char Pointer.
-When there is no more information to be received from the website, which is seen in  the connection is closed and the JSON string is parsed for the relevant information on whether or not the user was successful \autoref{pageJSON}.\fixme{sætningens sammenhæng giver ikke mening.dette for venter jeg: When ....then .....}
+Then in return the Ethernet Shield receives the HTML Page, and in \autoref{pageDecipher} the Arduino reads this information one byte at the time where all but the JSON string is stripped and stored in a char pointer.
+\fixme{Skal genskrives} When there is no more information to be received from the website, which is seen in  the connection is closed and the JSON string is parsed for the relevant information on whether or not the user was successful \autoref{pageJSON}.\fixme{sætningens sammenhæng giver ikke mening.dette for venter jeg: When ....then .....}
 \begin{lstlisting}[frame=single, label=pageConnect, caption=Connecting to the Server and creating an HTML request.]
 void turnOn(void)
 {
