--- a/report/text/usingRFID.tex
+++ b/report/text/usingRFID.tex
@@ -1,4 +1,5 @@
 \subsection{Using RFID With The Arduino}
+\fixme{Mangler lidt mere start som der var i Using the ethernet shield.}
 The Arduino board utilizes the SM130 by sending it commands and receiving replies through Digital Pins 7 and 8.
 These pins are initialized using the library \verb|SoftwareSerial.h|.\\
 \begin{lstlisting}
@@ -9,8 +10,9 @@ rfid.begin(19200); //This Method is called in the Setup() phase
                    //of the Arduino Startup.
 									 //It starts the Communication on the standard baud
 									 //rate of 19200 bps, N, 8, 1.
-													
+\fixme{enten skal vi forklare hvad "`baud"' og hvad 19200 bps, N, 8, 1 står for.}													
 \end{lstlisting}
+
 
 These messages are a series of bytes sent one at the time in the form of Hexadecimals and in the context of an UART framed message. \newline
 \begin{tabular}{|l|l|l|}
@@ -88,6 +90,8 @@ void parse_response(char PH[], int length)
 }													
 \end{lstlisting}
 
+
+\fixme{Ryk tabelen længere op da det vil give mere mening til alle henvisninger til bytes.}
 \begin{tabular}{|l|l|}
 \hline
 \hline
