Omdøbning og tilføjelse af subafsnit

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -46,9 +46,10 @@
 	\input{text/database.tex}
 	\input{text/api.tex}
 	\input{text/daemon.tex}
-	\input{text/ArduinoDesign.tex}
+	\input{text/ControllerDesign.tex}
 	\input{text/usingEthernet.tex}
 	\input{text/usingRFID.tex}
+	\input{text/ArduinoDesign.tex}
 	\input{text/websiteImplementationAndDesign.tex}
 	\input{text/overALLImplementation.tex}
 	
