--- a/report/text/newAnalysis.tex
+++ b/report/text/newAnalysis.tex
@@ -1,4 +1,4 @@
-\chapter{Parental Control - Why we need it} \fixme{der er meget datid og we i dette kapitel, skal omskrivs til nutid de fleste gange}
+\chapter{Parental Control - Why we need it} 
 Today children spend more and more time watching TV and playing video games. Research shows that there has been an increase in children's use of electronic media in later years. \citep{sundhedsstyrelsen}\\
 Research also shows that this increase in media usage have consequences for the children. It has been linked to sleep deprivation\citep{bmcPublicHealth} and lack of physical exercise\citep{bmcPublicHealth}.\\
 \\
@@ -12,7 +12,7 @@ In this section keywords are explained, in order to easier understand the report
 \textbf{Parental Control} is a concept most commonly found in televisions, computers and internet-browsers. They all serve to limit the access to inappropriate content, either in the form of adult content, or advanced features that should not be touched.\\
 \\
 \textbf{Internet of Things} is the subject of this project and is a concept where our society is going towards a greater deal of automation. The concept is based on different entities being able to adjust and act on their own and with each other. An example could be your coffee machine automatic reacting to you opening the front door and pours a cop of coffee for when you enter the kitchen, but if you do not pick up the coffee, or drink it in time, the coffee machine will start to register this, see patterns and modify its behavior accordingly.\citep{internetOfThings}\\
-In this project, we focus on the ability for different entities to act with each other. \fixme{LARS: Jeg er ikke så sikker på den her linje.}\\
+In this project, we focus on the ability for different entities to act with each other. \\
 \\
 \textbf{Media} is a term to cover any media, from tablet, phone, television, computer to gaming consoles.
 
@@ -25,8 +25,8 @@ If this tendency is not dealt with, the risk of children getting type 2 diabetes
 
 \section{Parental Control - How to extend it}
 \label{section:pcHowToExtend}
-As previously mentioned parental control is commonly found in televisions, computers and internet-browsers. But none of these tools are meant to limit the usage of a device totally, they are able to do so, but it will result in parents having to enter passwords for their children every time they need to use the device.\\
-The idea behind this project, is to extend the normal parental control, so that a child has a limited usage of media, without having the constant interaction from parents. \fixme{Maybe add a reference? -Jakob}
+As previously mentioned parental control is commonly found in televisions, computers and internet-browsers. But none of these tools are meant to limit the usage of a device totally, they are able to do so, but it will result in parents having to enter passwords for their children every time they need to use the device.\fixme{Maybe add a reference? -Jakob} \\
+The idea behind this project, is to extend the normal parental control, so that a child has a limited usage of media, without having the constant interaction from parents. 
 %For the idea to be an improvement upon the existing parental control, it must be able to give the parents control over their children's media usage without forcing the parents to be around constantly. (lisbeth: this repeat the line above)
 But simply restricting a child's media usage is not enough, for the idea to work. We believe it is also necessary to inspire the child to physical activity, e.g. by helping out at the house.\\
 \\
