Flytning af fixmes

--- a/report/text/ArduinoDesign.tex
+++ b/report/text/ArduinoDesign.tex
@@ -1,1 +1,6 @@
 \subsection{ArduinoDesign.}    
+\fixme{Indsæt flowchart}
+
+Flowchart is the current level of the prototype as is very similar to figure \ref{fig:Power&Tagdevice}.
+
+Therefore  the Ardurino hardware should be seen as replaceable by another controller device in this system. 
