--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -33,6 +33,14 @@ year = {September 2013},
 note ={\url{http://www.childrenandnature.org/}}
 }
 
+@MISC{irisid,
+author = {irisid},
+title = {Iris Recognition Technology},
+howpublished = {Website},
+year = {2013},
+note ={\url{http://www.irisid.com/irisrecognitiontechnology}}
+}
+
 @MISC{leaveNoChildInside,
 author = {Susan Clayton, Ph.D.},
 title = {Leave No Child Inside},
