--- a/report/text/hardware2.tex
+++ b/report/text/hardware2.tex
@@ -1,19 +1,19 @@
 \chapter{Hardware}
 \label{chap:hardware}
-In this section the hardware choices of this project will be talked about and analyzed. First the choice of hardware platform will be discussed, next the choice of hardware identification needed for the system and then the server setup. Followed each by a conclusion stating the hardware chosen.\fixme{We should add something in this chapter about how the Arduino, the tag and the server communicates or at least forward reference it, this should emphasize internet of things a bit.}
+In this section the hardware choices of this project will be talked about and analyzed. First the choice of hardware platform will be discussed, next the choice of hardware identification needed for the system and then the server setup. Followed each by a conclusion stating the hardware chosen.
 
 \section{Hardware Platform}
 In order to control the power to a media(i.e. Television or Computer), some analog power control is needed. Typically this is controlled by an embedded microcontroller\fixme{If this is typical, we need a source}, therefore the choice of hardware platform is to pick the best microcontroller for the project. A development board is usually used during development . A development board is a single printed circuit board with a microcontroller and everything needed to get the microcontroller running. Every I/O\footnote{Input/Output}(generally General-purpose I/O) of the microcontroller is also made easily available using group pins. Picking a hardware platform is then condensed into picking a development board. Following is a comparison of a few different development boards.
 
-\subsubsection{Arduino}
+\subsubsection{Arduino}\fixme{kilde}
 Arduino development boards come in a few variations, but common among all but one of them is that they are based on Atmel microcontrollers. Along with the development boards, Arduino also comes with its own software library \texttt{Wiring} which simplifies common I/O tasks. The Arduino development boards also implement a standard called \texttt{shields}, which are expansion circuit boards with pin headers that fit onto the development boards, with additional pins so that shields can be stacked. This makes the hardware platform easily extendable and flexible using this stacking system. Examples of shields could be GPS, Ethernet, LCD displays or breadboards.
 
 
-\subsubsection{Teensy}
+\subsubsection{Teensy}\fixme{kilde}
 Teensy, like Arduino is based on a Atmel microcontroller, but unlike Arduino is made to be as small as possible. Teensy also supplies a add-on library that makes Arduino programs compatible. Power is also supplied via USB instead of a dedicated power input on the Arduino, which also makes it cheaper. Teensy also does not have an equivalent of shields.
 
 
-\subsubsection{Raspberry Pi}
+\subsubsection{Raspberry Pi}\fixme{kilde}
 Raspberry Pi, unlike Arduino and Teensy uses a ``full-sized'' ARM processor, which makes it more like a regular computer than a microcontroller. Despite that it has GPI/O pins just like Arduino and Teensy, which means that it has the capabilities needed for the project. Being ARM based means that the Raspberry Pi can also install computer operating systems such as Linux based operating systems. The ARM processor is also many times more powerful than the Atmel microcontrollers. This however comes with negatives such as more power consumption, unused modules(GPU, sound or SD card storage) resulting in a larger board and a higher cost. 
 
 \subsection{Conclusion - Platform}
@@ -22,17 +22,17 @@ In conclusion the platform chosen is Arduino. Arduino is chosen because the univ
 \section{Hardware Identification}
 In order for the person using the system to identify themselves, there has to be some form of hardware identification. This hardware identification has to be unique for that person, so that the system can find out the allowed time of he can use on the media. Several factors have to be considered when choosing what hardware identification method to use, such as cost, user friendliness and security. Following is a comparison between some of the hardware identification methods available.
 
-\subsubsection{RFID}
+\subsubsection{RFID}\fixme{kilde}
 RFID, \fixme{Referance til dokumentation af RFID} short for Radio-frequency Identification, is a method of using either passive or active tags for transferring data between a reader and a tag. A tag is an embedded chip with an antenna, that when receiving power transmits the data on the chip to any readers within range. Active tags have their own power source and thus can be scaled to emit their data over long distances. Passive tags on the other hand do not have an internal power source, and instead is powered by the reader via magnetic fields. This makes passive tags work on smaller ranges. A tag can be compared to a bar code, with the difference being that tags scale much better when needing more data storage and the tag does not have to be visible, i.e. it can be embedded into for example key-cards, jewelry and such.
 
-\subsubsection{NFC}
+\subsubsection{NFC}\fixme{kilde}
 NFC, short for Near Field Communication, is a set of standards for the same technology that RFID uses. The differences between them is that NFC is a strict standard, uses only passive tags and only works over small distances. NFC is also the technology being embedded in smartphones, which means that the projects system could be made compatible with apps.
 
-\subsubsection{Fingerprint}
+\subsubsection{Fingerprint}\fixme{kilde}
 Fingerprint is a method of recognizing whether a persons fingerprint matches another already scanned fingerprint. A number of technologies can be used to scan a persons fingerprint, such as optical and ultrasonic. An algorithm is also needed to compare certain features of the fingerprint in order to be able to compare between fingerprints. One of the advantages of fingerprint is that the only equipment needed is the scanner and something to compare them, this means that the cost could be kept down. Fingerprints also have some disadvantages. One of the disadvantages is gathering the fingerprints of all family members where as other methods can be established by on person will fingerprints require all members are involved in the setup process. Another disadvantage is that it has been shown that children fingerprint change over time as they grow up, which could mean that the fingerprint has to be scanned again after a while. Fingerprints is also characterized as personal information and therefore need extra security measures. 
 
 \subsubsection{Iris Recognition}
-Iris Recognition\fixme{referance http://www.irisid.com/} is a method of scanning and comparing the iris of two eyes. The technology is somewhat new and have many good qualities. Our iris is one of the most unique traits as human and therefore is finding one the same iris as you is very on likely. The uniqueness of iris is also very characteristic and therefore easy to distinguish if two irises are a match and is therefore gives at more secure analysts. As a new technology an iris scanner is not cheap and is not simple to implement in household system with the need for many scanners.    
+Iris Recognition is a method of scanning and comparing the iris of two eyes. The technology is somewhat new and have many good qualities. Our iris is one of the most unique traits as human and therefore is finding one the same iris as you is very on likely. The uniqueness of iris is also very characteristic and therefore easy to distinguish if two irises are a match and is therefore gives at more secure analysts\citep{irisid}. As a new technology an iris scanner is not cheap and is not simple to implement in household system with the need for many scanners.    
    %Although the technology is somewhat new, it is already in use many places. Strengths of iris recognition is that it is fast, with comparisons being in the millions for single-core CPUs. Advantages of iris recognition is speed and accuracy. One disadvantage of iris recognition is that a high quality camera has to be used in order for the camera to pick up on small details. Iris scanners can like fingerprints be fooled using a high quality image printed on paper. Another disadvantage is that it has been shown that surgical procedures can change iris' so that the scanner can not recognize that person.
 
 \subsection{Conclusion - Identification}
@@ -43,7 +43,7 @@ The RFID has been chosen because it is easily accessible, and all of the practic
 In order to maintain the wast amount of information collected from the users and in order to offer a graphical interface to add rules, permissions and chores to the system a server setup will be needed.\\
 Such server work from a private home or collected global server, maintained by the manufacturer of the system.\\
 
-We here list the pros and cons of having a decentralized server setup versus centralized server setup.\\
+We here list the pros and cons of having a decentralized server setup versus centralized server setup.\fixme{kilde}\\
 
 \textbf{Decentralized Server Setup}\\
 Pros:
