--- a/report/text/ControllerDesign.tex
+++ b/report/text/ControllerDesign.tex
@@ -1,4 +1,5 @@
 \chapter{Design of the Controller}
+\label{chap:controller}
 This chapter is focused on the controller of the Media-Online Management system. The controller consist of a tag reader and power control device which is disgusted in this chapter but when mentioning controller both is implied. \newline
 The design and functionality of the prototype controller will be presented in parallel to the designed end product. \newline
 
