--- a/report/text/api.tex
+++ b/report/text/api.tex
@@ -1,4 +1,5 @@
 \chapter{The API}
+\label{chap:api}
 This chapter will explain the design and implementation of the API for this project.
 \section{Design}
 The API started with one clear goal, to be the middleman between the controllers and our database. The API's main purpose is to abstract away the need for the controllers to work directly with the database, along with it meaning more security for the database. With this in mind the API should also be as simple as possible, which lead to the API having only three actions. The three actions are \texttt{status}, \texttt{turn on} and \texttt{turn off}. \\
