--- a/report/text/newGeneralDesignConcepts.tex
+++ b/report/text/newGeneralDesignConcepts.tex
@@ -1,7 +1,7 @@
 \chapter{General Design Concepts}
 \label{chapter:concepts}
 %Go into detail about rules, permission, chores
-In the Media-Online Management there are a few concepts that will be used through out the report. These are chore, permission and rules. The meaning of each will be explain in following sections.\fixme{Evt. refferance til intro afsnit, alt efter hvor meget det minder om hinanden. Men uanset er det godt med en opsang.}
+In the Media-Online Management there are a few concepts that will be used through out the report. These are chore, permission and rules. The meaning of each will be explain in following sections.
 
 \section{Chore}
 A chore in MOM is a representation of a house chore that is to be done regularly. We have included chore into this system to encourage children to help with the house chores which gives more time for media as a reward. Therefore each chore needs a number of points which will be given when the child has done the house chore. 
