--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -1,4 +1,5 @@
 \chapter{Admin Web Interface}
+\lable{chap:website}
 This chapter goes into details about the design and implementation of the website used to administrate Media-Online Management (MOM).
 
 \section{Design}\fixme{Her er sikkert en masse 'we' som kan undværes}
