--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -99,6 +99,7 @@ This is done by pressing the checkbox in the left side of the tags overview, see
 
 
 \subsection{The Rules Page}
+\label{subsec:rulesWEB}
 The most advanced feature of the web interface is the rule page, therefor it is explained here.
 
 \begin{figure}[htbp]
