--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -1,5 +1,5 @@
 \chapter{Admin Web Interface}
-\lable{chap:website}
+\label{chap:website}
 This chapter goes into details about the design and implementation of the website used to administrate Media-Online Management (MOM).
 
 \section{Design}\fixme{Her er sikkert en masse 'we' som kan undværes}
@@ -128,7 +128,7 @@ Next the repeat pattern is selected. The repeat pattern changes the time constra
 
 \begin{figure}[htbp]
 	\centering
-		\includegraphics[width=1.00\textwidth]{images/CreateRuleFlowchart.png}
+		\includegraphics[width=1.00\textwidth, angle=90]{images/CreateRuleFlowchart.png}
 	\caption{Create Rule Flowchart}
 	\label{fig:CreateRuleFlowchart}
 \end{figure}
