--- a/report/text/futureWork.tex
+++ b/report/text/futureWork.tex
@@ -2,3 +2,11 @@
 LARS: We should write a bit about how the system could try to learn habits. Or how registereing the use of different media, could turn out to be valuable information, both in relation to marketing and in relation to improving our health by raising awareness about habits.\\
 \\
 LARS: We should think about if it could be nice for the parents to instead of writing rules, simply make the system learn habits based on when the parents turn of the device with their special tag?
+
+\text{Database and functions Lib}
+\textbf{Website}
+\textbf{Daemon}
+\textbf{API}
+\textbf{Controller}
+
+
