--- a/report/text/ControllerDesign.tex
+++ b/report/text/ControllerDesign.tex
@@ -22,6 +22,7 @@ The detection device(DD) should also inform the user who is trying to activate a
 %The detection device(DD) also works as an information communicator to the user, on the state of the connection to the server about acceptance/decline of log-in. \newline    
 
 \subsection{Senario Design}
+\label{subsec:senarioD}
 
 The system has been designed on multiple scenarios and the criteria of communication to the server and user. The flow chart \ref{} is an overview of the action and communication the two devices have to give the right permission to user, communicate with the user and server about status, handle disconnection to server and control of user and time usage restrictions.\fixme{sentence makes no sense}\newline
 
