--- a/report/draft.tex
+++ b/report/draft.tex
@@ -56,7 +56,9 @@
 	\input{text/test.tex}
 
 	%Part Perspective
+	
 	\part{Perspective}
+	\input{conclusion.tex}
 	\input{text/futureWork.tex}
 	
 	\bibliographystyle{plain}
